--- a/css/modules.css
+++ b/css/modules.css
@@ -1,7 +1,7 @@
 /*
  * Modulifier || Code released under the UNLICENSE
  * Code under other copyrights & licenses listed below.
- * https://modulifier.web-dev.tools/#responsive;images;list-group;embed;media-object;print
+ * https://modulifier.web-dev.tools/#responsive;images;list-group;embed;positioning
  */
 
 @-moz-viewport { width: device-width; scale: 1; }
@@ -209,171 +209,196 @@ svg.img-flex {
   width: 100%;
 }
 
-.media {
-  overflow: hidden;
+.clearfix::after {
+  content: " ";
+  display: block;
+  clear: both;
 }
 
-.media-img, .media__img {
+.left {
   float: left;
 }
 
-.media-img-reversed, .media__img--reversed {
+.right {
   float: right;
 }
 
-.media-img-stacked, .media__img--stacked {
-  float: none;
+.center-text,
+.center-flow {
+  text-align: center;
 }
 
-.media-body, .media__body {
-  overflow: hidden;
-  min-width: 12em; /* Slightly less than 200px, responsiveness built in */
+.center-block {
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.print-only {
-  display: none;
-  visibility: hidden;
+.inline {
+  display: inline;
 }
 
-.page-break-before {
-  page-break-before: always;
+.block {
+  display: block;
 }
 
-.page-break-after {
-  page-break-after: always;
+.inline-block, .ib {
+  display: inline-block;
 }
 
-.no-page-break-inside {
-  page-break-inside: avoid;
+.valign-top {
+  vertical-align: top;
 }
 
-@media print {
+.valign-bottom {
+  vertical-align: bottom;
+}
 
-  /* stylelint-disable declaration-no-important */
+.valign-middle {
+  vertical-align: middle;
+}
 
-  .no-print {
-    display: none !important;
-    visibility: hidden !important;
-  }
+.fixed {
+  position: fixed;
+}
 
-  .print-only,
-  .force-print {
-    display: block !important;
-    visibility: visible !important;
-  }
+.relative {
+  position: relative;
+}
 
-  /* stylelint-enable */
+[class*="pin-"],
+.absolute {
+  position: absolute;
+}
 
-  .visually-hidden.force-print {
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    padding: 0;
-    position: static;
-    width: auto;
-    border: 0;
-    clip: initial;
-    clip-path: none;
-  }
+.static {
+  position: static;
+}
 
-  /*
-   * (c) Fabien Sa || MIT License
-   *     http://bafs.github.io/Gutenberg/
-   */
+.zindex-1 {
+  z-index: 1;
+}
 
-  table,
-  blockquote,
-  pre,
-  code,
-  figure,
-  li,
-  hr,
-  ul,
-  ol,
-  a,
-  tr {
-    page-break-inside: avoid;
-  }
+.zindex-2 {
+  z-index: 2;
+}
 
-  h1, h2, h3, h4, h5, h6, p, a {
-    orphans: 3;
-    widows: 3;
-  }
+.zindex-3 {
+  z-index: 3;
+}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    page-break-after: avoid;
-    page-break-inside: avoid;
-  }
+.zindex-1000 {
+  z-index: 1000;
+}
 
-  h1 + p,
-  h2 + p,
-  h3 + p,
-  h4 + p,
-  h5 + p,
-  h6 + p {
-    page-break-before: avoid;
-  }
+.pin-top-left,
+.pin-left-top,
+.pin-tl,
+.pin-lt {
+  top: 0;
+  left: 0;
+}
 
-  img {
-    page-break-after: auto;
-    page-break-before: auto;
-    page-break-inside: avoid;
-  }
+.pin-top-right,
+.pin-right-top,
+.pin-tr,
+.pin-rt {
+  top: 0;
+  right: 0;
+}
 
-  /* stylelint-disable declaration-no-important */
+.pin-bottom-left,
+.pin-left-bottom,
+.pin-bl,
+.pin-lb {
+  bottom: 0;
+  left: 0;
+}
 
-  pre {
-    white-space: pre-wrap !important;
-    word-wrap: break-word;
-  }
+.pin-bottom-right,
+.pin-right-bottom,
+.pin-br,
+.pin-rb {
+  bottom: 0;
+  right: 0;
+}
 
-  /* stylelint-enable */
+.pin-top-center,
+.pin-center-top,
+.pin-tc,
+.pin-ct {
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+}
 
-  /* End Gutenberg code */
+.pin-bottom-center,
+.pin-center-bottom,
+.pin-bc,
+.pin-cb {
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
-  /*
-   * (c) HTML5 Boilerplate || MIT License
-   *     https://html5boilerplate.com/
-   */
+.pin-center-left,
+.pin-left-center,
+.pin-cl,
+.pin-lc {
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
 
-  /* stylelint-disable declaration-no-important */
+.pin-center-right,
+.pin-right-center,
+.pin-cr,
+.pin-rc {
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
 
-  *, *::before, *::after, *::first-letter, *::first-line {
-    background: none transparent !important;
-    color: #000 !important;
-    box-shadow: none !important;
-    text-shadow: none !important;
-  }
+.pin-center, .pin-c {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  /* stylelint-enable */
+.width-quarter, .w-1-4 {
+  width: 25%;
+}
 
-  a, a:visited {
-    text-decoration: underline;
-  }
+.width-half, .w-1-2 {
+  width: 50%;
+}
 
-  a[href]::after {
-    content: " (" attr(href) ")";
-  }
+.width-full, .w-1 {
+  width: 100%;
+}
 
-  abbr[title]::after {
-    content: " (" attr(title) ")";
-  }
+.height-quarter, .h-1-4 {
+  height: 25%;
+}
 
-  a[href^="#"]::after,
-  a[href^="javascript:"]::after,
-  a.no-print-href::after,
-  a.href-no-print::after {
-    content: "";
-  }
+.height-half, .h-1-2 {
+  height: 50%;
+}
 
-  thead {
-    display: table-header-group;
-  }
+.height-full, .h-1 {
+  height: 100%;
+}
 
-  /* End HTML5 Boilerplate code */
+.height-win-quarter, .h-w-1-4 {
+  height: 25vh;
+  max-height: 46em;
+}
+
+.height-win-half, .h-w-1-2 {
+  height: 50vh;
+  max-height: 46em;
+}
+
+.height-win-full, .h-w-1 {
+  height: 100vh;
+  max-height: 46em;
 }
